# chalice-uv-template

./: .envrc.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.chalice/: config.json
tests/: test_app.py
